Fix overflow handling

--- a/src/sass/recent-decks.scss
+++ b/src/sass/recent-decks.scss
@@ -42,6 +42,8 @@
 		margin: 0;
 		width: $lhse*8;
 		height: $lhse*1.3333;
+		overflow: hidden;
+		border-radius: $border-radius-button; // For decks with excessively long names.
 	}
 	a {
 		display: flex;
@@ -58,7 +60,6 @@
 		line-height: 1;
 		width: 100%;
 		height: 100%;
-		overflow: hidden;
 		text-align: left;
 		border: 1px solid $color-group-bg-darker;
 		background: $color-group-bg;
